fixes button z-index

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -55,6 +55,7 @@
   align-items: center;
   justify-content:center;
   padding: 1rem;
+  z-index: 2;
 }
 
 .carousel .icon-arrow-right{
